// Interfaz Estrategia
public interface EstrategiaAnalisis {
    Alerta analizar(Sensor sensor);
}
