// Enumeración para niveles de alerta
public enum NivelAlerta {
    CRITICO,
    ADVERTENCIA,
    INFORMATIVO
}
